--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "ajv": "8.11.0",
+    "sweetalert2": "^11.7.20",
     "apexcharts": "^3.44.0",
     "arrive": "2.4.1",
     "bootstrap": "4.6.1",
